#80 Finished! now the console is secured